fix: fix issues from the build
fix: simplify the kafka sasl mechanism configuration